# shorteo

./: .gitignore  .pre-commit-config.yaml  README.md  license.txt  manage.py  pyproject.toml
shorteo/: asgi.py  settings.py  urls.py  wsgi.py
url_shortener/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
url_shortener/migrations/: 0001_initial.py
