[project]
name = "shorteo"
version = "0.1.0"
description = "Service for shortening URLs"
readme = "README.md"
authors = [
    { name = "Jan Okruta", email = "jan.okruta@gmail.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "django~=5.1",
    "django-rest-framework",
]

[dependency-groups]
dev = [
    "ipython",
    "parameterized",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 96
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
